# rs-rawzip2jsons

./: Cargo.toml  README.md  example.sh  opt.sh  rawzip2jsons.wasm
sample.d/: hw1.json  hw2.json
src/: lib.rs
