[package]
name = "rs-rawzip2jsons"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rawzip = "0.4"

[[bin]]
name = "rawzip2jsons"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
